fixed vertical alignment of table's list

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,3 +1,7 @@
 .wrapper {
   overflow-x: auto;
 }
+
+table td, table th {
+  vertical-align: middle;
+}
